--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 <!-- Page Header -->
+<script id="dsq-count-scr" src="//yeomi92.disqus.com/count.js" async></script> 
 {% if page.background %}
 <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
   {% else %}
