--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -51,5 +51,10 @@ layout: default
         </div>
 
       </div>
+      {% if page.comments != false %}
+        {% include disqus_comments.html %}
+      {% endif %}
     </div>
+    
   </div>
+  
