--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -17,23 +17,20 @@ layout: default
             {% if page.subtitle %}
             <h2 class="subheading">{{ page.subtitle }}</h2>
             {% endif %}
-            <span class="meta">Posted by
-              <a href="#">Start Bootstrap</a>
-              on {{ page.date | date: '%B %d, %Y' }} &middot; {% include read_time.html
-              content=page.content %}</span>
+            <span class="meta">{{ page.date | date: '%B %d, %Y' }}</span>
           </div>
         </div>
       </div>
     </div>
   </header>
 
-  <div class="container">
+  <div class="container markdown-body">
     <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-
+      <div class="col-lg-8 col-md-10 mx-auto" style="margin-bottom: 20px;">
+        <div class="content-div">
         {{ content }}
-
-        <hr>
+        </div>
+        <hr style="margin-top: 3rem;">
 
         <div class="clearfix">
 
