--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
-  <link rel="stylesheet" href="{{"/assets/test.css" | relative_url }}">
+  <link rel="stylesheet" href="{{"/assets/github-markdown.css" | relative_url }}">
+  <link rel="stylesheet" href="{{"/assets/style.css" | relative_url }}">
 
 </head>
