--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -14,7 +14,7 @@ layout: default
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
           <div class="page-heading">
-            <h1>{{ site.title }}</h1>
+            <!-- <h1>{{ site.title }}</h1> -->
             {% if site.description %}
             <span class="subheading">{{ site.description }}</span>
             {% endif %}
@@ -35,21 +35,19 @@ layout: default
 
         <article class="post-preview">
           <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
-            <h2 class="post-title">{{ post.title }}</h2>
-            {% if post.subtitle %}
-            <h3 class="post-subtitle">{{ post.subtitle }}</h3>
-            {% else %}
-            <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
+            <div class="post-title">{{ post.title }}</div>
+            <div class="post-subtitle">{{ post.subtitle }}</div>
+            {% if post.hashtag %}
+            <div class="post-hashtag">
+            {% for tag in post.hashtag %}
+            <div class="tag">{{tag}}</div>
+            {% endfor %}
+            </div>
             {% endif %}
           </a>
           <p class="post-meta">Posted by
-            {% if post.author %}
-            {{ post.author }}
-            {% else %}
-            {{ site.author }}
-            {% endif %}
             on
-            {{ post.date | date: '%B %d, %Y' }} &middot; {% include read_time.html content=post.content %}</p>
+            {{ post.date | date: '%Y-%m-%d' }}</p>
         </article>
 
         <hr>
