--- a/assets/style.scss
+++ b/assets/style.scss
@@ -4,16 +4,18 @@
         border-bottom: 2px solid #8080804d;
         padding: 20px 10px;
         &:hover{
-            background: #0085a112;
-            a{
-                color: white !important;
+            //background: #0085a112;
+            .btn_read_post{
                 background-color: #0085A1; 
+                span{
+                    color: white !important;
+                }
             }
         }
         .div_post{
+            position: relative;
             display: flex;
             justify-content: space-between;
-            
             .post_info{
                 >div{
                     padding: 5px 0;
@@ -28,26 +30,50 @@
                     font-weight: bold;
                     color: #0085A1;
                 }
+                .post_excerpt{
+                    width: 75%;
+                }
             }
             .btn_read_post{
-                display: flex;
-                margin-top: 37px;
-                padding-bottom: 5px;
+                position: absolute;
+                bottom: 0;
+                right: 0;
+                height: 40px;
+                border: 3px solid #0085A1;
+                cursor: pointer;
                 a{
                     padding: 0px 10px;
-                    border: 3px solid #0085A1;
                     text-decoration: none;
-                    color: #0085A1;
-                    span{
-                        vertical-align: text-bottom;
+                    span{                        
+                        color: #0085A1;
+                        font-size: 16px;
+                        font-weight: bold;
                     }
-                    &:hover{
-                        color: white;
-                        background-color: #0085A1;
-                    }
+                }
+                &:hover{
+                    color: white;
+                    background-color: #0085A1;
                 }
                 
             }
+        }
+    }
+}
+.btn_arrow{
+    font-size: 20px;
+    &:focus{
+        outline: none;
+        box-shadow: none;
+    }
+}
+.btn_index{
+    display: flex;
+    justify-content: center;
+    a{
+        background: black;
+        color: white !important;
+        &:hover{
+            opacity: 0.8;
         }
     }
 }
