--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -31,22 +31,13 @@ layout: default
         {{ content }}
         </div>
         <hr style="margin-top: 3rem;">
-
-        <div class="clearfix">
-
-          {% if page.previous.url %}
-          <a class="btn btn-primary float-left" href="{{ page.previous.url | prepend: site.baseurl | replace: '//', '/' }}"
-            data-toggle="tooltip" data-placement="top" title="{{ page.previous.title }}">&larr; Previous<span class="d-none d-md-inline">
-              Post</span></a>
-          {% endif %}
-          {% if page.next.url %}
-          <a class="btn btn-primary float-right" href="{{ page.next.url | prepend: site.baseurl | replace: '//', '/' }}"
-            data-toggle="tooltip" data-placement="top" title="{{ page.next.title }}">Next<span class="d-none d-md-inline">
-              Post</span> &rarr;</a>
-          {% endif %}
-
-        </div>
       </div>
+    </div>
+    
+  </div>
+  <div class="container">
+    <div class="clearfix btn_index">
+      <a class="btn" href="{{"/posts" | relative_url }}">목록으로</a>
     </div>
     {% if page.comments != false %}
       {% include disqus_comments.html %}
